live/deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: basta-2020-deployments
  labels:
    environment: development
    kind: backend
spec:
  type: ClusterIP
  selector:
    app: webapi
    city: Mainz
    environment: development
  ports:
    - port: 8080
      targetPort: 80
